# text_to_speech_bot

./: pyproject.toml
text_to_speech_bot/: bot.py  config.py  db.py  speechkit.py
